toned down the glow on the title a bit

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ header {
 h1 {
 	font: 48pt 'SpecialEliteRegular', monospace;
 	color: #91EB09;
-	text-shadow: 0px 0px 20px #D6DB7B;
+	text-shadow: 0px 0px 15px #CCBB66;
 	margin: 0;
 	padding: 0;
 }
